# Rouillo

./: .gitignore  Cargo.toml  README.md  adresse_ip.txt
TEMPORARY_DONOTDELETE/: Cargo.toml  README.md  old_sdl2.rs  old_wasm.rs
TEMPORARY_DONOTDELETE/src/: logic.rs  main.rs
client/: Cargo.toml  index.html
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
tests/: base.rs  bruh.rs  old_main.txt  term_main.txt  test.rs  working.rs
